  usage of the functions involved in the change. SQuirreL will not load the "Edit Extras"-Plugin anymore.

Updated Polish translation. Thanks to Begina Felicysym.

Syntax plugin: Last five find strings are now saved and can be selected from the drop down of the find and replace dialog.


Bug fixes:

Fixed bug in "Copy as SQL INSERT-VALUES statement" option: Closing brackets could be lost when timestamp was generated.
  Thanks to Marek for the patch.

#1241 Switching tab using Alt Left/Right doesn't work right after tabs were moved using drag and drop

Improved logging and handling of "Content" tab display in "Objects" tab with the aim of tracking/preventing.
 - If an SQL to load the content tab fails, the complete SQL string ist written to the logs
 - "SELECT *  ..." statement is issued as last fallback.

For the DB2 data types "FOR BIT DATA", GRAPHIC and VARGRAPHIC the "Store result of SQL in table" function did not create the correct "CREATE TABLE" script.
  Thanks to Marek for the patch.


Concerning result output as text:
  Replace null string character (0x00) with SPACE char, as this character cannot be copied to clipboard and data after this null char are not copied.
  (E.g. occurs when working on Win7 with DB2.)
  This fix also replace FF form feed character (0x0C) with SPACE char,
  as FF character is causing problem when text data are pasted into advanced text editor like Ultraedit, it creates unexpected new lines.
  Thanks to Marek for the patch.

Some options in New Session Properties (abort on error, write sql errors to log file) are not saved after Squirrel restart
  Thanks to Marek for the patch.

Milliseconds are lost when you copy timestamp value via "Copy as SQL INSERT-VALUES statement" option
  Thanks to Marek for the patch.

#1240 Data import plugin: When exception occured auto commit mode was usually changed.
  Along with this fix come the following improvements:
  - UI is resizeable
  - Better error messages
